<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.TabLayout
        app:tabGravity="fill"
        app:tabSelectedTextColor="@color/dotham"
        android:background="@android:color/transparent"
        app:tabTextColor="@color/colorPrimary"
        app:tabMode="fixed"
        app:tabIndicatorColor="@color/dotham"
        android:id="@+id/tablayout_angi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/nearby"
                    android:textAllCaps="false"
                    android:text="@string/gantoi"
                    android:layout_margin="5dp"
                    android:background="@android:color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/blog"
                    android:textAllCaps="false"
                    android:text="@string/blogs"
                    android:layout_margin="5dp"
                    android:background="@android:color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/order"
                    android:textAllCaps="false"
                    android:text="@string/giaohang"
                    android:layout_margin="5dp"
                    android:background="@android:color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/gameandfun"
                    android:textAllCaps="false"
                    android:text="Game and fun"
                    android:layout_margin="5dp"
                    android:background="@android:color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/review"
                    android:textAllCaps="false"
                    android:text="@string/danhgia"
                    android:layout_margin="5dp"
                    android:background="@android:color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/user"
                    android:textAllCaps="false"
                    android:text="@string/topmember"
                    android:layout_margin="5dp"
                    android:background="@android:color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>